--- a/package.json
+++ b/package.json
@@ -4,12 +4,22 @@
   "description": "A full stack blockchain application.",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "start": "node index.js",
+    "dev": "npm run start-redis && nodemon index.js",
+    "start-redis": "redis-server --daemonize yes",
+    "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^24.9.0"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "hex-to-binary": "^1.0.1",
+    "jest": "^24.9.0",
+    "pubnub": "^4.27.1",
+    "redis": "^2.8.0",
+    "request": "^2.88.0"
   },
   "repository": {
     "type": "git",
@@ -18,5 +28,9 @@
   "bugs": {
     "url": "https://github.com/dhruvkhanna38/MyCryptochain/issues"
   },
-  "homepage": "https://github.com/dhruvkhanna38/MyCryptochain#readme"
+  "homepage": "https://github.com/dhruvkhanna38/MyCryptochain#readme",
+  "devDependencies": {
+    "cross-env": "^6.0.3",
+    "nodemon": "^2.0.1"
+  }
 }
